fix: align search entry

--- a/src/styles/stylesheet.css
+++ b/src/styles/stylesheet.css
@@ -5,6 +5,7 @@
 
 .pano-window .search-entry-container {
   padding: 10px;
+  padding-bottom: 5px;
 }
 
 .pano-window .search-entry-icon {
